# usine_logicielle_j6

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  bandit-report.json  docker-compose.yml  pyproject.toml  release-please-config.json  reponde.md  reponse.md  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  release.yml
src/: app.py
tests/: test_app.py
