[project]
name = "mon-projet-flask"
version = "1.0.0"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
"E", # erreurs pycodestyle
"W", # warnings pycodestyle
"F", # erreurs pyflakes
"I", # tri des imports (isort)
"B", # bugbear (bugs courants)
"UP", # pyupgrade (modernisation)
"S",
"SIM",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
